// Generic configuration options for Go TLS clients/servers, see
// https://golang.org/pkg/crypto/tls/#Config.

syntax = "proto3";

package hazaelsan.ssh_relay;

option go_package = "github.com/hazaelsan/ssh-relay/proto/tls_go_proto";

// Next ID: 6
message TlsConfig {
  // Path to an X.509 certificate (in PEM format).
  string cert_file = 1;

  // Path to an X.509 private key (in PEM format).
  string key_file = 2;

  // List of paths to X.509 Root CA public certificates (in PEM format).
  // Used by clients to verify server certificates.
  // If empty, the host's root CA set is used.
  repeated string root_ca_certs = 3;

  // List of paths to X.509 Root CA public certificates (in PEM format).
  // Used by servers to verify client certificates.
  repeated string client_ca_certs = 4;

  // Policy for TLS client authentication.
  // Used in conjunction with client_ca_certs.
  // Next ID: 5
  enum ClientAuthType {
    NO_CLIENT_CERT = 0;
    REQUEST_CLIENT_CERT = 1;
    REQUIRE_ANY_CLIENT_CERT = 2;
    VERIFY_CLIENT_CERT_IF_GIVEN = 3;
    REQUIRE_AND_VERIFY_CLIENT_CERT = 4;
  }
  ClientAuthType client_auth_type = 5;
}
